--- a/css/pages/useful-links.css
+++ b/css/pages/useful-links.css
@@ -4,3 +4,97 @@
   background-size: cover;
   height: 240px;
 }
+/*flip-bottom*/
+.flip-btm img {
+  display: block;
+  width: 100%;
+  height: 240px;
+}
+.flip-btm .flipBtmDiv {
+  position: absolute;
+  right: 15px;
+  left: 15px;
+  bottom: 0px;
+  top: 80%;
+  background-color: #2c1111;
+  padding: 10px;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transform: rotateX(90deg);
+  -webkit-transform: rotateX(90deg);
+  -moz-transform: perspective(300px) rotateX(90deg);
+  -o-transform: rotateX(90deg);
+  transform-origin: 50% 100% 0;
+  -webkit-transition: 0.5s;
+  text-align: center;
+}
+.flip-btm .flipBtmDiv img {
+  display: block;
+  width: 30%;
+  height: auto;
+  margin: 0 auto;
+  vertical-align: middle;
+}
+.flip-btm:hover .flipBtmDiv {
+  -webkit-transform: rotateX(0deg);
+  -webkit-transform: rotateX(0deg);
+  -moz-transform: rotateX(0deg);
+  -o-transform: rotateX(0deg);
+}
+.ism-elem7__box.logo-box {
+  min-height: 150px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+}
+.ism-elem7__box.logo-box img {
+  -webkit-transition: all 0.6s ease;
+  -moz-transition: all 0.6s ease;
+  -ms-transition: all 0.6s ease;
+  -o-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+}
+
+.ism-elem7__box {
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  background-clip: padding-box;
+  padding: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.09);
+  background-color: var(--white);
+  margin-bottom: 20px;
+  height: -moz-calc(100% - 20px);
+  height: -webkit-calc(100% - 20px);
+  height: calc(100% - 20px);
+  position: relative;
+  /* border: 1px solid #192f60; */
+  border-radius: 8px;
+  word-wrap: break-word;
+  box-shadow: 0 4px 25px rgba(34, 86, 102, 0.07);
+}
+.ism-elem7__box .caption {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-color: #F3F6FD;
+  padding: 10px;
+  color: #192F60;
+  font-size: 12px;
+  text-align: center;
+  width: 100%;
+  font-weight: 550;
+}
