--- a/css/pages/gallery.css
+++ b/css/pages/gallery.css
@@ -15,3 +15,30 @@
     height: 290px;
   }
 }
+.nav-tabs .nav-link.active {
+  color: #fff !important;
+  background-color: #1c1c1c;
+  border-color: none !important;
+}
+.nav-item button {
+  border-radius: 5px;
+}
+.nav-link {
+  background: #fff;
+}
+
+.item {
+  margin-bottom: 25px;
+  height: -moz-calc(100% - 25px);
+  height: -webkit-calc(100% - 25px);
+  height: calc(100% - 25px);
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+.ism-elem10_wrap .item img {
+  object-fit: cover;
+  height: 333px;
+}
