banner height adjusted

--- a/css/pages/about-semicon.css
+++ b/css/pages/about-semicon.css
@@ -2,5 +2,5 @@
   background-image: url(../../images/banners/about-semicon-banner.webp);
   background-position: center;
   background-size: cover;
-  height: 240px;
+  height: 25vh;
 }
