--- a/css/pages/about-us.css
+++ b/css/pages/about-us.css
@@ -2,5 +2,5 @@
   background-image: url(../../images/banners/about-ism-banner.png);
   background-position: center;
   background-size: cover;
-  height: 240px;
+  height: 25vh;
 }
