--- a/css/pages/our-team.css
+++ b/css/pages/our-team.css
@@ -3,7 +3,7 @@
   background-position: center;
   background-size: cover;
   /* border-radius: 8px; */
-  height: 240px;
+  height: 25vh;
 }
 .ism-cards {
   background-color: var(--white);
