--- a/css/pages/contact-us.css
+++ b/css/pages/contact-us.css
@@ -2,7 +2,7 @@
   background-image: url(../../images/banners/contact-us-banner.webp);
   background-position: center;
   background-size: cover;
-  height: 240px;
+  height: 25vh;
 }
 .job-post-card{
   background-color: #fff;
