--- a/css/pages/ism-commitee.css
+++ b/css/pages/ism-commitee.css
@@ -2,7 +2,7 @@
   background-image: url(../../images/banners/ism-commitee-banner.webp);
   background-position: center;
   background-size: cover;
-  height: 240px;
+  height: 25vh;
 }
 .ism-cards {
   background-color: #fff;
