--- a/css/pages/useful-links.css
+++ b/css/pages/useful-links.css
@@ -2,48 +2,9 @@
   background-image: url(../../images/banners/useful-links-banner.webp);
   background-position: center;
   background-size: cover;
-  height: 240px;
+  height: 25vh;
 }
-/*flip-bottom*/
-.flip-btm img {
-  display: block;
-  width: 100%;
-  height: 240px;
-}
-.flip-btm .flipBtmDiv {
-  position: absolute;
-  right: 15px;
-  left: 15px;
-  bottom: 0px;
-  top: 80%;
-  background-color: #2c1111;
-  padding: 10px;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  -o-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-transform: rotateX(90deg);
-  -webkit-transform: rotateX(90deg);
-  -moz-transform: perspective(300px) rotateX(90deg);
-  -o-transform: rotateX(90deg);
-  transform-origin: 50% 100% 0;
-  -webkit-transition: 0.5s;
-  text-align: center;
-}
-.flip-btm .flipBtmDiv img {
-  display: block;
-  width: 30%;
-  height: auto;
-  margin: 0 auto;
-  vertical-align: middle;
-}
-.flip-btm:hover .flipBtmDiv {
-  -webkit-transform: rotateX(0deg);
-  -webkit-transform: rotateX(0deg);
-  -moz-transform: rotateX(0deg);
-  -o-transform: rotateX(0deg);
-}
+
 .ism-elem7__box.logo-box {
   min-height: 150px;
   display: -webkit-box;
