--- a/css/pages/contact-us.css
+++ b/css/pages/contact-us.css
@@ -15,7 +15,9 @@
 }
 .table-container{
   border-radius: 8px;
-background: #F3F6FD;
-
-
+  background: #F3F6FD !important;
+}
+.table{
+  background-color: #F3F6FD !important;
+  --bs-table-bg: #F3F6FD !important;
 }
