--- a/css/pages/ism-commitee.css
+++ b/css/pages/ism-commitee.css
@@ -34,3 +34,7 @@
   font-size: 14px;
   font-weight: normal;
 }
+.table{
+  background-color: #F3F6FD !important;
+  --bs-table-bg: #F3F6FD !important;
+}
