--- a/css/pages/gallery.css
+++ b/css/pages/gallery.css
@@ -8,7 +8,8 @@
   background: var(--light-blue);
   border-radius: 8px;
   padding: 1rem;
-  margin: 1rem 0.5rem;
+  margin:1rem 0;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 
   img {
     width: 100%;
