--- a/css/pages/scheme.css
+++ b/css/pages/scheme.css
@@ -34,6 +34,8 @@
   background: #F3F6FD;
   padding: 2rem;
   border-radius: 8px;
+  height: 100%;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .details-cards_title{
   /* color: #1C1C1C;
@@ -98,4 +100,26 @@ letter-spacing: 0.28px;
 .scheme-apply-cards_title img{
   height: 50px;
   margin-bottom: 15px;
+}
+.user-btn-pad {
+  padding: 7px 21px;
+}
+.gc-wrapper li {
+  list-style: disc;
+  margin-left: 20px;
+}
+.accordion-header_text{
+  color: #1C1C1C;
+font-family: Poppins;
+font-size: 20px;
+font-style: normal;
+font-weight: 500;
+line-height: 38.051px; /* 135.895% */
+letter-spacing: 0.56px;
+}
+.accordion-button {
+  background: #f3f6fd !important;
+  /* box-shadow: 0px 2px 16.7px 0px rgb(232, 238, 253); */
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
 }
