--- a/css/pages/gallery.css
+++ b/css/pages/gallery.css
@@ -10,10 +10,14 @@
   padding: 1rem;
   margin:1rem 0;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-
+  min-height: 410px;
+  
   img {
     width: 100%;
     height: 290px;
+  }
+  h3{
+    margin: 0;
   }
 }
 .nav-tabs .nav-link.active {
