--- a/css/pages/our-team.css
+++ b/css/pages/our-team.css
@@ -113,7 +113,7 @@
   object-fit: cover;
   width: 100%;
   height: 100%;
-  object-position: center;
+  object-position: top;
 }
 .ism-cards_content {
   position: relative;
