--- a/style.css
+++ b/style.css
@@ -443,9 +443,10 @@ btn:hover {
 
 .notification-tabs {
   background: var(--light-blue);
-  height: 60px;
+  height: fit-content;
   margin-bottom: 20px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 0.5rem;
 }
 
 .notification-icon {
@@ -455,6 +456,7 @@ btn:hover {
 
 .notification-text {
   font-size: 14px;
+  width: 85%;
 }
 
 .notification-date {
