--- a/style.css
+++ b/style.css
@@ -98,7 +98,10 @@ p {
   letter-spacing: 0.32px;
   font-weight: 500;
 }
-
+.header-active{
+  border-bottom: 2px solid #192F60;
+    padding-bottom: 2px;
+}
 .main-heading {
   color: var(--dark-blue);
   font-size: 20px;
